--- a/style.css
+++ b/style.css
@@ -3,36 +3,40 @@ html {
   width: 100%;
 }
 
-body {
-  margin-top: 25%;
+body,h1 {
+  font-weight: bold;
+  font-size: 1.5rem;
+  font-family: Arial;
   display: block;
   justify-content: center;
   align-items: center;
 }
+.popUp{
+  display: block;
+}
 
-.btn-container {
-  border: none;
-  background-color: hsl(11, 80%, 90%);
+.img-container {
+  margin-top: 5%;
+  width: fit-content;
+  /* border: 1px solid red; */
+  /* background-color: hsl(11, 80%, 90%); */
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
 #btnRock,
 #btnPaper,
 #btnScissors {
-  background-color: hsl(209, 80%, 70%);
-  width: 50%;
-  height: 100%;
+  background-color: hsl(210, 80%, 70%);
+  width: 20%;
+  height: 20%;
   padding: 10px 15px;
+  /* border: 1px solid red; */
   border-radius: 5px;
-  border: none;
-  font-weight: bolder;
-  font-size: 1.5rem;
-  color: hsl(0, 0%, 100%);
-  font-family: Arial;
+  /* border: none; */
   cursor: pointer;
-  margin: 2%;
+  margin: 1.5%;
 }
 
 #p0 {
@@ -46,4 +50,9 @@ body {
 h1,
 h3 {
   text-align: center;
+}
+#message{
+  font-size: 3.5rem;
+  text-align: center;
+  background-color: hsl(210, 80%, 70%);
 }
